--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,14 +22,22 @@ steps:
 - script: dotnet publish -c Release -o $(Build.ArtifactStagingDirectory)
   displayName: 'Publish the application'
 
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
+    includeRootFolder: false
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/app.zip'
+    replaceExistingArchive: true
+
 - task: PublishBuildArtifacts@1
   inputs:
-    pathToPublish: $(Build.ArtifactStagingDirectory)
+    pathToPublish: '$(Build.ArtifactStagingDirectory)'
     artifactName: 'drop'
 
 - task: AzureWebApp@1
   inputs:
     azureSubscription: 'azure-service-connection'
     appName: 'FlipsoApp'
-    package: '$(Build.ArtifactStagingDirectory)/*.zip'
+    package: '$(Build.ArtifactStagingDirectory)/app.zip'
     deploymentMethod: 'runFromPackage'
